fix overflow issues

--- a/style.css
+++ b/style.css
@@ -561,3 +561,6 @@ table.pofile tr,
 table.pofile td {
   border: 1px solid #dee2e6;
 }
+.pofile-wrap {
+  overflow: auto;
+}
